Left align Indicator and corrected “Add to Knowledge Base” button misalignment.

--- a/frappe/public/less/mobile.less
+++ b/frappe/public/less/mobile.less
@@ -407,3 +407,13 @@ body {
 		}
 	}
 }
+@media(max-width: 580px) {
+	.timeline-item.user-content {
+		.comment-header {
+			.btn-add-to-kb {
+				float: none !important;
+				margin-top: 5px !important;
+			}
+		}
+	}
+}
